CertCKAD/bai20/depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: final
  name: app-final
  namespace: final-exam
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-final
  template:
    metadata:
      labels:
        app: app-final
    spec:
      containers:
      - image: nginx:alpine
        name: nginx
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 200m
        volumeMounts:
        - name: data-mount
          mountPath: /data
    volumes:
    - name: data-mount
      persistentVolumeClaim:
        claimName: app-pvc
status: {}
