CertCKAD/bai20/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: final
  name: app-final
  namespace: final-exam
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: app-final
status:
  loadBalancer: {}
