CertCKAD/bai20/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: final-exam
spec:
  rules:
  -  http:
      paths:
      - backend:
          service:
            name: app-final
            port:
              number: 80
        path: /final
        pathType: Prefix
status:
  loadBalancer: {}
